Improve header styles

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -79,6 +79,8 @@ figcaption
   width: 1.5rem
   height: 1.5rem
   fill: currentColor
+.navbar-brand .navbar-item
+  font-weight: 700
 .navbar-brand .navbar-item.logo
   padding: 0 1rem
 footer.footer
