Add subscription form

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -11,6 +11,10 @@ figcaption
   text-align: center
   margin-top: .5rem
 
+.subscription-form
+  display: flex
+  justify-content: center
+
 .navbar .navbar-menu
   box-shadow:none !important
 
@@ -62,10 +66,10 @@ figcaption
     border-radius: .25rem
     text-decoration: none
     font-weight: 700
-    color: #CC3700
+    color: $primary
     text-align: center
-    -webkit-box-shadow: inset 0 0 0 2px #CC3700
-    box-shadow: inset 0 0 0 2px #f40
+    -webkit-box-shadow: inset 0 0 0 2px $primary
+    box-shadow: inset 0 0 0 2px $primary
     -webkit-transition: all .15s ease
     transition: all .15s ease
 
