Make blog post content more narrow
Kind of a hack but a quick fix to make the blog post content more narrow
even on high res screens for a better reading experience.

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -12,6 +12,9 @@ figcaption
   font-style: italic
   margin-top: .5rem
 
+.content.blog-content
+  max-width: 960px;
+
 .subscription-form
   display: flex
   justify-content: center
