Add basic recommended posts section
Hard coded for now

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -80,6 +80,9 @@ figcaption
 .margin-top-0
   margin-top: 0 !important
 
+.blog-list-item.notification
+  background-color: #e8e9ef
+
 .navbar-item .icon
   color: $primary
 // Override for use of svg's from https://simpleicons.org/
