--- a/src/components/media.css
+++ b/src/components/media.css
@@ -1,3 +1,8 @@
+figure {
+  margin: 0;
+  margin-bottom: 2rem;
+}
+
 figcaption {
   text-align: center;
   font-style: italic;
@@ -10,4 +15,3 @@ video {
   margin-left: auto;
   margin-right: auto;
 }
-
