Add next and previous links to posts

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -8,7 +8,16 @@ $body-color: #333
 $black: #2b2523
 
 .content.blog-content
-  max-width: 960px;
+  max-width: 960px
+
+.prev-next-links-wrapper
+  display: flex
+  justify-content: space-between
+  flex-wrap: wrap
+
+.prev-next-links
+  margin-top: 2rem
+  text-decoration: underline
 
 .subscription-form
   display: flex
