Fix eslint warnings
Changed navbar burger to button to fix a11y warnings

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -19,6 +19,10 @@ $black: #2b2523
   margin-top: 2rem
   text-decoration: underline
 
+button.navbar-burger
+  border: 0
+  background-color: #fff
+
 .subscription-form
   display: flex
   justify-content: center
