Add footer comment

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -103,7 +103,7 @@ button.navbar-burger
 .navbar-brand .navbar-item.logo
   padding: 0 1rem
 footer.footer
-  padding: 3rem 0rem 0rem
+  padding: 3rem 0rem
   background-color: transparent
 
 //Menu overrides
