--- a/src/components/media.css
+++ b/src/components/media.css
@@ -9,8 +9,16 @@ figcaption {
   margin-top: 0.5rem;
 }
 
+.blog-content img {
+  max-height: 100vh;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 video {
   max-width: 100%;
+  max-height: 100vh;
   display: block;
   margin-left: auto;
   margin-right: auto;
