--- a/src/components/media.css
+++ b/src/components/media.css
@@ -1,3 +1,11 @@
+.post-info {
+  display: flex;
+  align-items: center;
+}
+.post-info p {
+  margin: .5em 0 0 0;
+}
+
 figure {
   margin: 0;
   margin-bottom: 2rem;
